--- a/D-marina-EasyToReserve/Base.lproj/Main.html
+++ b/D-marina-EasyToReserve/Base.lproj/Main.html
@@ -10,10 +10,14 @@
     <script src="../Script.js" defer></script>
 </head>
 <body>
-    <img src="../Icon.png" width="128" height="128" alt="D-marina-EasyToReserve Icon">
-    <p class="state-unknown">You can turn on D-marina-EasyToReserve’s extension in Safari Extensions preferences.</p>
-    <p class="state-on">D-marina-EasyToReserve’s extension is currently on. You can turn it off in Safari Extensions preferences.</p>
-    <p class="state-off">D-marina-EasyToReserve’s extension is currently off. You can turn it on in Safari Extensions preferences.</p>
+    <img src="../Icon.png" width="64" height="64" alt="D-marina-EasyToReserve Icon">
+    <h1>EZ-NET Reservation Support Tool<br/>for D-marina</h1>
+    <p>This is an Safari App Extension that is useful for scheduling a boat rental with D-marina.</p>
+    <aside>
+    <p class="state-unknown">You can turn on this extension in Safari Extensions preferences.</p>
+    <p class="state-on">This extension is currently on. You can turn it off in Safari Extensions preferences.</p>
+    <p class="state-off">This extension is currently off. You can turn it on in Safari Extensions preferences.</p>
     <button class="open-preferences">Quit and Open Safari Extensions Preferences…</button>
+    </aside>
 </body>
 </html>
