--- a/D-marina-EasyToReserve/Base.lproj/Main.html
+++ b/D-marina-EasyToReserve/Base.lproj/Main.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <img src="../Icon.png" width="64" height="64" alt="D-marina-EasyToReserve Icon">
-    <h1>EZ-NET Reservation Support Tool<br/>for D-marina</h1>
+    <h1>Reservation Support for D-marina</h1>
     <p>This is an Safari App Extension that is useful for scheduling a boat rental with D-marina.</p>
     <aside>
     <p class="state-unknown">You can turn on this extension in Safari Extensions preferences.</p>
