Renames the apps name for US region.

--- a/D-marina-EasyToReserve/Base.lproj/Main.html
+++ b/D-marina-EasyToReserve/Base.lproj/Main.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <img src="../Icon.png" width="64" height="64" alt="D-marina-EasyToReserve Icon">
-    <h1>Reservation Support for D-marina</h1>
-    <p>This is an Safari App Extension that is useful for scheduling a boat rental with D-marina.</p>
+    <h1>Booking Support for D-marina</h1>
+    <p>This is a Safari App Extension that is useful for scheduling a boat rental with D-marina in Japan.</p>
     <aside>
     <p class="state-unknown">You can turn on this extension in Safari Extensions preferences.</p>
     <p class="state-on">This extension is currently on. You can turn it off in Safari Extensions preferences.</p>
